--- a/package.json
+++ b/package.json
@@ -4,9 +4,24 @@
   "description": "饺子翻译插件开发模版",
   "license": "ISC",
   "author": "西园公子",
-  "type": "commonjs",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "axios": "^1.7.5",
+    "crypto-js": "^4.2.0",
+    "marked": "^12.0.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
+    "vitest": "^1.2.2"
   }
 }
